Removed Deprecated  API's